overflow bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,9 @@
 }
 
 img,
-picture {
+picture,
+iframe,
+video {
   max-width: 100%;
   display: block;
 }
