--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -11,7 +11,9 @@
 }
 
 img,
-picture {
+picture,
+iframe,
+video {
   max-width: 100%;
   display: block;
 }
